# blindtrain

./: .gitignore  README.md  app.py  conftest.py  lessons.py  pyproject.toml
instance/: trainer_data.db  typist.db
static/js/: hands-worker.js
templates/: achievements.html  index.html  leaderboard.html  lessons.html  login.html  register.html  stats.html
tests/: conftest.py  test_achievements.py  test_auth.py  test_custom_background.py  test_leaderboard.py  test_lessons.py  test_pose_analysis.js  test_trainer.py  test_unlocks.py
